src/objects/graxopportunityindex__x/graxopportunityindex__x.object-meta.xml
<CustomObject>
    <description>graxopportunityindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxopportunityindex</externalName>
    <label>graxopportunityindex</label>
    <pluralLabel>graxopportunityindex</pluralLabel>
</CustomObject>