src/objects/graxopportunityindex__x/fields/Account_Name_Custom_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Custom_c__c</fullName>
    <description>Account_Name_Custom__c</description>
    <externalDeveloperName>Account_Name_Custom__c</externalDeveloperName>
    <label>Account_Name_Custom__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>