src/objects/graxopportunityindex__x/fields/Account_Region_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Region_c__c</fullName>
    <description>Account_Region__c</description>
    <externalDeveloperName>Account_Region__c</externalDeveloperName>
    <label>Account_Region__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>