src/objects/graxopportunityindex__x/fields/Account_Relationship_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship_c__c</fullName>
    <description>Account_Relationship__c</description>
    <externalDeveloperName>Account_Relationship__c</externalDeveloperName>
    <label>Account_Relationship__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>