src/objects/graxopportunityindex__x/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>AccountId</description>
    <externalDeveloperName>AccountId</externalDeveloperName>
    <label>AccountId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>