src/objects/graxopportunityindex__x/fields/AccountId_grax_xf_account__c.field-meta.xml
<CustomField>
    <fullName>AccountId_grax_xf_account__c</fullName>
    <description>AccountId_grax_xf_account</description>
    <externalDeveloperName>AccountId_grax_xf_account</externalDeveloperName>
    <label>AccountId_grax_xf_account</label>
    <length>128</length>
    <type>Text</type>
</CustomField>