src/objects/graxopportunityindex__x/fields/Adjusted_Opportunity_Value2_c__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Opportunity_Value2_c__c</fullName>
    <description>Adjusted_Opportunity_Value2__c</description>
    <externalDeveloperName>Adjusted_Opportunity_Value2__c</externalDeveloperName>
    <label>Adjusted_Opportunity_Value2__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>