src/objects/graxopportunityindex__x/fields/Application_c__c.field-meta.xml
<CustomField>
    <fullName>Application_c__c</fullName>
    <description>Application__c</description>
    <externalDeveloperName>Application__c</externalDeveloperName>
    <label>Application__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>