src/objects/graxopportunityindex__x/fields/Approval_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Approval_Amount_c__c</fullName>
    <description>Approval_Amount__c</description>
    <externalDeveloperName>Approval_Amount__c</externalDeveloperName>
    <label>Approval_Amount__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>