src/objects/graxopportunityindex__x/fields/Approval_Cycle_Time_c__c.field-meta.xml
<CustomField>
    <fullName>Approval_Cycle_Time_c__c</fullName>
    <description>Approval_Cycle_Time__c</description>
    <externalDeveloperName>Approval_Cycle_Time__c</externalDeveloperName>
    <label>Approval_Cycle_Time__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>