src/objects/graxopportunityindex__x/fields/Approval_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_c__c</fullName>
    <description>Approval_Date__c</description>
    <externalDeveloperName>Approval_Date__c</externalDeveloperName>
    <label>Approval_Date__c</label>
    <type>Date</type>
</CustomField>