src/objects/graxopportunityindex__x/fields/Assumptions_Attached_c__c.field-meta.xml
<CustomField>
    <fullName>Assumptions_Attached_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assumptions_Attached__c</description>
    <externalDeveloperName>Assumptions_Attached__c</externalDeveloperName>
    <label>Assumptions_Attached__c</label>
    <type>Checkbox</type>
</CustomField>