src/objects/graxopportunityindex__x/fields/Attach_Profitability_Trend_c__c.field-meta.xml
<CustomField>
    <fullName>Attach_Profitability_Trend_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attach_Profitability_Trend__c</description>
    <externalDeveloperName>Attach_Profitability_Trend__c</externalDeveloperName>
    <label>Attach_Profitability_Trend__c</label>
    <type>Checkbox</type>
</CustomField>