src/objects/graxopportunityindex__x/fields/Attach_Shipping_History_c__c.field-meta.xml
<CustomField>
    <fullName>Attach_Shipping_History_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Attach_Shipping_History__c</description>
    <externalDeveloperName>Attach_Shipping_History__c</externalDeveloperName>
    <label>Attach_Shipping_History__c</label>
    <type>Checkbox</type>
</CustomField>