src/objects/graxopportunityindex__x/fields/Budget_Confirmed_c__c.field-meta.xml
<CustomField>
    <fullName>Budget_Confirmed_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Budget_Confirmed__c</description>
    <externalDeveloperName>Budget_Confirmed__c</externalDeveloperName>
    <label>Budget_Confirmed__c</label>
    <type>Checkbox</type>
</CustomField>