src/objects/graxopportunityindex__x/fields/Business_Unit_c__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_c__c</fullName>
    <description>Business_Unit__c</description>
    <externalDeveloperName>Business_Unit__c</externalDeveloperName>
    <label>Business_Unit__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>