src/objects/graxopportunityindex__x/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <description>CampaignId</description>
    <externalDeveloperName>CampaignId</externalDeveloperName>
    <label>CampaignId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>