src/objects/graxopportunityindex__x/fields/CampaignId_grax_xf_campaign__c.field-meta.xml
<CustomField>
    <fullName>CampaignId_grax_xf_campaign__c</fullName>
    <description>CampaignId_grax_xf_campaign</description>
    <externalDeveloperName>CampaignId_grax_xf_campaign</externalDeveloperName>
    <label>CampaignId_grax_xf_campaign</label>
    <length>128</length>
    <type>Text</type>
</CustomField>