src/objects/graxopportunityindex__x/fields/Class_Level_for_Development_Programs_c__c.field-meta.xml
<CustomField>
    <fullName>Class_Level_for_Development_Programs_c__c</fullName>
    <description>Class_Level_for_Development_Programs__c</description>
    <externalDeveloperName>Class_Level_for_Development_Programs__c</externalDeveloperName>
    <label>Class_Level_for_Development_Programs__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>