src/objects/graxopportunityindex__x/fields/Clone_c__c.field-meta.xml
<CustomField>
    <fullName>Clone_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clone__c</description>
    <externalDeveloperName>Clone__c</externalDeveloperName>
    <label>Clone__c</label>
    <type>Checkbox</type>
</CustomField>