src/objects/graxopportunityindex__x/fields/cloneCount_c__c.field-meta.xml
<CustomField>
    <fullName>cloneCount_c__c</fullName>
    <description>cloneCount__c</description>
    <externalDeveloperName>cloneCount__c</externalDeveloperName>
    <label>cloneCount__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>