src/objects/graxopportunityindex__x/fields/CLose_Date_Month_Number_c__c.field-meta.xml
<CustomField>
    <fullName>CLose_Date_Month_Number_c__c</fullName>
    <description>CLose_Date_Month_Number__c</description>
    <externalDeveloperName>CLose_Date_Month_Number__c</externalDeveloperName>
    <label>CLose_Date_Month_Number__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>