src/objects/graxopportunityindex__x/fields/Close_Date_To_From_c__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_To_From_c__c</fullName>
    <description>Close_Date_To_From__c</description>
    <externalDeveloperName>Close_Date_To_From__c</externalDeveloperName>
    <label>Close_Date_To_From__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>