src/objects/graxopportunityindex__x/fields/Close_Month_c__c.field-meta.xml
<CustomField>
    <fullName>Close_Month_c__c</fullName>
    <description>Close_Month__c</description>
    <externalDeveloperName>Close_Month__c</externalDeveloperName>
    <label>Close_Month__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>