src/objects/graxopportunityindex__x/fields/Closed_Lost_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason_c__c</fullName>
    <description>Closed_Lost_Reason__c</description>
    <externalDeveloperName>Closed_Lost_Reason__c</externalDeveloperName>
    <label>Closed_Lost_Reason__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>