src/objects/graxopportunityindex__x/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>CloseDate</description>
    <externalDeveloperName>CloseDate</externalDeveloperName>
    <label>CloseDate</label>
    <type>Date</type>
</CustomField>