src/objects/graxopportunityindex__x/fields/Collect_Account_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Collect_Account_Number_c__c</fullName>
    <description>Collect_Account_Number__c</description>
    <externalDeveloperName>Collect_Account_Number__c</externalDeveloperName>
    <label>Collect_Account_Number__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>