src/objects/graxopportunityindex__x/fields/Commission_Rate_c__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate_c__c</fullName>
    <description>Commission_Rate__c</description>
    <externalDeveloperName>Commission_Rate__c</externalDeveloperName>
    <label>Commission_Rate__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>