src/objects/graxopportunityindex__x/fields/Company_c__c.field-meta.xml
<CustomField>
    <fullName>Company_c__c</fullName>
    <description>Company__c</description>
    <externalDeveloperName>Company__c</externalDeveloperName>
    <label>Company__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>