src/objects/graxopportunityindex__x/fields/Competition_c__c.field-meta.xml
<CustomField>
    <fullName>Competition_c__c</fullName>
    <description>Competition__c</description>
    <externalDeveloperName>Competition__c</externalDeveloperName>
    <label>Competition__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>