src/objects/graxopportunityindex__x/fields/Competitor_c__c.field-meta.xml
<CustomField>
    <fullName>Competitor_c__c</fullName>
    <description>Competitor__c</description>
    <externalDeveloperName>Competitor__c</externalDeveloperName>
    <label>Competitor__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>