src/objects/graxopportunityindex__x/fields/Composite_Amount_Score_c__c.field-meta.xml
<CustomField>
    <fullName>Composite_Amount_Score_c__c</fullName>
    <description>Composite_Amount_Score__c</description>
    <externalDeveloperName>Composite_Amount_Score__c</externalDeveloperName>
    <label>Composite_Amount_Score__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>