src/objects/graxopportunityindex__x/fields/Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_c__c</fullName>
    <description>Contact__c</description>
    <externalDeveloperName>Contact__c</externalDeveloperName>
    <label>Contact__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>