src/objects/graxopportunityindex__x/fields/Contact_Text_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_Text_c__c</fullName>
    <description>Contact_Text__c</description>
    <externalDeveloperName>Contact_Text__c</externalDeveloperName>
    <label>Contact_Text__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>