src/objects/graxopportunityindex__x/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <description>ContactId</description>
    <externalDeveloperName>ContactId</externalDeveloperName>
    <label>ContactId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>