src/objects/graxopportunityindex__x/fields/ContactId_grax_xf_contact__c.field-meta.xml
<CustomField>
    <fullName>ContactId_grax_xf_contact__c</fullName>
    <description>ContactId_grax_xf_contact</description>
    <externalDeveloperName>ContactId_grax_xf_contact</externalDeveloperName>
    <label>ContactId_grax_xf_contact</label>
    <length>128</length>
    <type>Text</type>
</CustomField>