src/objects/graxopportunityindex__x/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <description>ContractId</description>
    <externalDeveloperName>ContractId</externalDeveloperName>
    <label>ContractId</label>
    <length>128</length>
    <type>Text</type>
</CustomField>