src/objects/graxopportunityindex__x/fields/Country_c__c.field-meta.xml
<CustomField>
    <fullName>Country_c__c</fullName>
    <description>Country__c</description>
    <externalDeveloperName>Country__c</externalDeveloperName>
    <label>Country__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>