src/objects/graxopportunityindex__x/fields/Created_w_Clone_with_Products_Button_c__c.field-meta.xml
<CustomField>
    <fullName>Created_w_Clone_with_Products_Button_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created_w_Clone_with_Products_Button__c</description>
    <externalDeveloperName>Created_w_Clone_with_Products_Button__c</externalDeveloperName>
    <label>Created_w_Clone_with_Products_Button__c</label>
    <type>Checkbox</type>
</CustomField>