src/objects/graxopportunityindex__x/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <description>CreatedById</description>
    <externalDeveloperName>CreatedById</externalDeveloperName>
    <label>CreatedById</label>
    <length>128</length>
    <type>Text</type>
</CustomField>