src/objects/graxopportunityindex__x/fields/CreatedById_grax_xf_user__c.field-meta.xml
<CustomField>
    <fullName>CreatedById_grax_xf_user__c</fullName>
    <description>CreatedById_grax_xf_user</description>
    <externalDeveloperName>CreatedById_grax_xf_user</externalDeveloperName>
    <label>CreatedById_grax_xf_user</label>
    <length>128</length>
    <type>Text</type>
</CustomField>