src/objects/graxopportunityindex__x/fields/Current_FY_c__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Current_FY__c</description>
    <externalDeveloperName>Current_FY__c</externalDeveloperName>
    <label>Current_FY__c</label>
    <type>Checkbox</type>
</CustomField>