src/objects/graxopportunityindex__x/fields/Current_User_is_VP_c__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_VP_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Current_User_is_VP__c</description>
    <externalDeveloperName>Current_User_is_VP__c</externalDeveloperName>
    <label>Current_User_is_VP__c</label>
    <type>Checkbox</type>
</CustomField>