src/objects/graxopportunityindex__x/fields/Cust_Tracking_c__c.field-meta.xml
<CustomField>
    <fullName>Cust_Tracking_c__c</fullName>
    <description>Cust_Tracking__c</description>
    <externalDeveloperName>Cust_Tracking__c</externalDeveloperName>
    <label>Cust_Tracking__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>