src/objects/graxopportunityindex__x/fields/Custom_or_modified_part_for_defense_c__c.field-meta.xml
<CustomField>
    <fullName>Custom_or_modified_part_for_defense_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom_or_modified_part_for_defense__c</description>
    <externalDeveloperName>Custom_or_modified_part_for_defense__c</externalDeveloperName>
    <label>Custom_or_modified_part_for_defense__c</label>
    <type>Checkbox</type>
</CustomField>