src/objects/graxopportunityindex__x/fields/Description_c__c.field-meta.xml
<CustomField>
    <fullName>Description_c__c</fullName>
    <description>Description__c</description>
    <externalDeveloperName>Description__c</externalDeveloperName>
    <label>Description__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>