src/objects/graxopportunityindex__x/fields/Design_Registration_c__c.field-meta.xml
<CustomField>
    <fullName>Design_Registration_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Design_Registration__c</description>
    <externalDeveloperName>Design_Registration__c</externalDeveloperName>
    <label>Design_Registration__c</label>
    <type>Checkbox</type>
</CustomField>