src/objects/graxopportunityindex__x/fields/Development_Costing_Attached_c__c.field-meta.xml
<CustomField>
    <fullName>Development_Costing_Attached_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Development_Costing_Attached__c</description>
    <externalDeveloperName>Development_Costing_Attached__c</externalDeveloperName>
    <label>Development_Costing_Attached__c</label>
    <type>Checkbox</type>
</CustomField>