src/objects/graxopportunityindex__x/fields/Discovery_Completed_c__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Completed_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discovery_Completed__c</description>
    <externalDeveloperName>Discovery_Completed__c</externalDeveloperName>
    <label>Discovery_Completed__c</label>
    <type>Checkbox</type>
</CustomField>