src/objects/graxopportunityindex__x/fields/Display_Forecast_Category_c__c.field-meta.xml
<CustomField>
    <fullName>Display_Forecast_Category_c__c</fullName>
    <description>Display_Forecast_Category__c</description>
    <externalDeveloperName>Display_Forecast_Category__c</externalDeveloperName>
    <label>Display_Forecast_Category__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>