src/objects/graxopportunityindex__x/fields/Do_not_partial_c__c.field-meta.xml
<CustomField>
    <fullName>Do_not_partial_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do_not_partial__c</description>
    <externalDeveloperName>Do_not_partial__c</externalDeveloperName>
    <label>Do_not_partial__c</label>
    <type>Checkbox</type>
</CustomField>