src/objects/graxopportunityindex__x/fields/Domestic_Carrier_Other_c__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Carrier_Other_c__c</fullName>
    <description>Domestic_Carrier_Other__c</description>
    <externalDeveloperName>Domestic_Carrier_Other__c</externalDeveloperName>
    <label>Domestic_Carrier_Other__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>