src/objects/graxopportunityindex__x/fields/DR_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>DR_Contact_c__c</fullName>
    <description>DR_Contact__c</description>
    <externalDeveloperName>DR_Contact__c</externalDeveloperName>
    <label>DR_Contact__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>