src/objects/graxopportunityindex__x/fields/DR_Status_c__c.field-meta.xml
<CustomField>
    <fullName>DR_Status_c__c</fullName>
    <description>DR_Status__c</description>
    <externalDeveloperName>DR_Status__c</externalDeveloperName>
    <label>DR_Status__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>