src/objects/graxopportunityindex__x/fields/DR_Type_c__c.field-meta.xml
<CustomField>
    <fullName>DR_Type_c__c</fullName>
    <description>DR_Type__c</description>
    <externalDeveloperName>DR_Type__c</externalDeveloperName>
    <label>DR_Type__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>