src/objects/graxopportunityindex__x/fields/Drop_Ship_c__c.field-meta.xml
<CustomField>
    <fullName>Drop_Ship_c__c</fullName>
    <description>Drop_Ship__c</description>
    <externalDeveloperName>Drop_Ship__c</externalDeveloperName>
    <label>Drop_Ship__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>