src/objects/graxopportunityindex__x/fields/Duplicate_Design_Registration_c__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Design_Registration_c__c</fullName>
    <description>Duplicate_Design_Registration__c</description>
    <externalDeveloperName>Duplicate_Design_Registration__c</externalDeveloperName>
    <label>Duplicate_Design_Registration__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>