src/objects/graxopportunityindex__x/fields/Duplicate_Design_Registration_c_grax_xf__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Design_Registration_c_grax_xf__c</fullName>
    <description>Duplicate_Design_Registration__c_grax_xf_opportunity</description>
    <externalDeveloperName>Duplicate_Design_Registration__c_grax_xf_opportunity</externalDeveloperName>
    <label>Duplicate_Design_Registration__c_grax_xf</label>
    <length>128</length>
    <type>Text</type>
</CustomField>