src/objects/graxopportunityindex__x/fields/End_Customer_Lookup_c_grax_xf_account__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Lookup_c_grax_xf_account__c</fullName>
    <description>End_Customer_Lookup__c_grax_xf_account</description>
    <externalDeveloperName>End_Customer_Lookup__c_grax_xf_account</externalDeveloperName>
    <label>End_Customer_Lookup__c_grax_xf_account</label>
    <length>128</length>
    <type>Text</type>
</CustomField>