src/objects/graxopportunityindex__x/fields/End_Customer_Text_c__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_Text_c__c</fullName>
    <description>End_Customer_Text__c</description>
    <externalDeveloperName>End_Customer_Text__c</externalDeveloperName>
    <label>End_Customer_Text__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>