src/objects/graxopportunityindex__x/fields/Eng_Priority_Level_c__c.field-meta.xml
<CustomField>
    <fullName>Eng_Priority_Level_c__c</fullName>
    <description>Eng_Priority_Level__c</description>
    <externalDeveloperName>Eng_Priority_Level__c</externalDeveloperName>
    <label>Eng_Priority_Level__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>