src/objects/graxopportunityindex__x/fields/Engineering_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Status_c__c</fullName>
    <description>Engineering_Status__c</description>
    <externalDeveloperName>Engineering_Status__c</externalDeveloperName>
    <label>Engineering_Status__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>