src/objects/graxopportunityindex__x/fields/Epiworks_RPS_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Epiworks_RPS_Number_c__c</fullName>
    <description>Epiworks_RPS_Number__c</description>
    <externalDeveloperName>Epiworks_RPS_Number__c</externalDeveloperName>
    <label>Epiworks_RPS_Number__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>