src/objects/graxopportunityindex__x/fields/Estimated_Lifetime_Value_c__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Lifetime_Value_c__c</fullName>
    <description>Estimated_Lifetime_Value__c</description>
    <externalDeveloperName>Estimated_Lifetime_Value__c</externalDeveloperName>
    <label>Estimated_Lifetime_Value__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>