src/objects/graxopportunityindex__x/fields/EUV_c__c.field-meta.xml
<CustomField>
    <fullName>EUV_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EUV__c</description>
    <externalDeveloperName>EUV__c</externalDeveloperName>
    <label>EUV__c</label>
    <type>Checkbox</type>
</CustomField>