src/objects/graxopportunityindex__x/fields/Ex_Works_c__c.field-meta.xml
<CustomField>
    <fullName>Ex_Works_c__c</fullName>
    <description>Ex_Works__c</description>
    <externalDeveloperName>Ex_Works__c</externalDeveloperName>
    <label>Ex_Works__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>