src/objects/graxopportunityindex__x/fields/Executive_Summary_c__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary_c__c</fullName>
    <description>Executive_Summary__c</description>
    <externalDeveloperName>Executive_Summary__c</externalDeveloperName>
    <label>Executive_Summary__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>