src/objects/graxopportunityindex__x/fields/ExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRevenue__c</fullName>
    <description>ExpectedRevenue</description>
    <externalDeveloperName>ExpectedRevenue</externalDeveloperName>
    <label>ExpectedRevenue</label>
    <length>128</length>
    <type>Text</type>
</CustomField>