src/objects/graxopportunityindex__x/fields/Expiration_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_c__c</fullName>
    <description>Expiration_Date__c</description>
    <externalDeveloperName>Expiration_Date__c</externalDeveloperName>
    <label>Expiration_Date__c</label>
    <type>Date</type>
</CustomField>