src/objects/graxopportunityindex__x/fields/Ext_Id_c__c.field-meta.xml
<CustomField>
    <fullName>Ext_Id_c__c</fullName>
    <description>Ext_Id__c</description>
    <externalDeveloperName>Ext_Id__c</externalDeveloperName>
    <label>Ext_Id__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>