src/objects/graxopportunityindex__x/fields/Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Fiscal__c</fullName>
    <description>Fiscal</description>
    <externalDeveloperName>Fiscal</externalDeveloperName>
    <label>Fiscal</label>
    <length>128</length>
    <type>Text</type>
</CustomField>