src/objects/graxopportunityindex__x/fields/FiscalQuarter__c.field-meta.xml
<CustomField>
    <fullName>FiscalQuarter__c</fullName>
    <description>FiscalQuarter</description>
    <externalDeveloperName>FiscalQuarter</externalDeveloperName>
    <label>FiscalQuarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>