src/objects/graxopportunityindex__x/fields/FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>FiscalYear__c</fullName>
    <description>FiscalYear</description>
    <externalDeveloperName>FiscalYear</externalDeveloperName>
    <label>FiscalYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>