src/objects/graxopportunityindex__x/fields/Forecast_Accuracy_c__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Accuracy_c__c</fullName>
    <description>Forecast_Accuracy__c</description>
    <externalDeveloperName>Forecast_Accuracy__c</externalDeveloperName>
    <label>Forecast_Accuracy__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>