src/objects/graxopportunityindex__x/fields/Forecast_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount_c__c</fullName>
    <description>Forecast_Amount__c</description>
    <externalDeveloperName>Forecast_Amount__c</externalDeveloperName>
    <label>Forecast_Amount__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>