src/objects/graxopportunityindex__x/fields/ForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategory__c</fullName>
    <description>ForecastCategory</description>
    <externalDeveloperName>ForecastCategory</externalDeveloperName>
    <label>ForecastCategory</label>
    <length>128</length>
    <type>Text</type>
</CustomField>