src/objects/graxopportunityindex__x/fields/ForecastCategoryName__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategoryName__c</fullName>
    <description>ForecastCategoryName</description>
    <externalDeveloperName>ForecastCategoryName</externalDeveloperName>
    <label>ForecastCategoryName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>