src/objects/graxopportunityindex__x/fields/geopointe_Geocode_c__c.field-meta.xml
<CustomField>
    <fullName>geopointe_Geocode_c__c</fullName>
    <description>geopointe__Geocode__c</description>
    <externalDeveloperName>geopointe__Geocode__c</externalDeveloperName>
    <label>geopointe__Geocode__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>