src/objects/graxopportunityindex__x/fields/Global_Account_Manager_GAM_c__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Manager_GAM_c__c</fullName>
    <description>Global_Account_Manager_GAM__c</description>
    <externalDeveloperName>Global_Account_Manager_GAM__c</externalDeveloperName>
    <label>Global_Account_Manager_GAM__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>