src/objects/graxopportunityindex__x/fields/Global_Account_Manager_GAM_c_grax_xf_use__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Manager_GAM_c_grax_xf_use__c</fullName>
    <description>Global_Account_Manager_GAM__c_grax_xf_user</description>
    <externalDeveloperName>Global_Account_Manager_GAM__c_grax_xf_user</externalDeveloperName>
    <label>Global_Account_Manager_GAM__c_grax_xf_us</label>
    <length>128</length>
    <type>Text</type>
</CustomField>