src/objects/graxopportunityindex__x/fields/Glovia_Opportunity_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Glovia_Opportunity_Number_c__c</fullName>
    <description>Glovia_Opportunity_Number__c</description>
    <externalDeveloperName>Glovia_Opportunity_Number__c</externalDeveloperName>
    <label>Glovia_Opportunity_Number__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>