src/objects/graxopportunityindex__x/fields/GRAX_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Amount_c__c</fullName>
    <description>GRAX_Amount__c</description>
    <externalDeveloperName>GRAX_Amount__c</externalDeveloperName>
    <label>GRAX_Amount__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>