src/objects/graxopportunityindex__x/fields/grax_competitor_c_name__c.field-meta.xml
<CustomField>
    <fullName>grax_competitor_c_name__c</fullName>
    <description>grax_competitor__c_name</description>
    <externalDeveloperName>grax_competitor__c_name</externalDeveloperName>
    <label>grax_competitor__c_name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>